@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2020 the original author or authors.
+ * Copyright 2002-2022 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -17,21 +17,25 @@
 package org.springframework.web.reactive.resource;
 
 import java.io.IOException;
+import java.nio.file.Paths;
 import java.time.Duration;
-import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicReference;
+import java.util.stream.Stream;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.MethodSource;
 import reactor.core.publisher.Flux;
 import reactor.core.publisher.Mono;
 import reactor.test.StepVerifier;
 
 import org.springframework.core.io.ClassPathResource;
+import org.springframework.core.io.FileSystemResource;
 import org.springframework.core.io.Resource;
 import org.springframework.core.io.UrlResource;
 import org.springframework.core.io.buffer.DataBuffer;
@@ -43,6 +47,7 @@ import org.springframework.http.HttpMethod;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
 import org.springframework.http.server.PathContainer;
+import org.springframework.util.ClassUtils;
 import org.springframework.util.StringUtils;
 import org.springframework.web.reactive.HandlerMapping;
 import org.springframework.web.server.MethodNotAllowedException;
@@ -51,6 +56,7 @@ import org.springframework.web.server.ServerWebExchange;
 import org.springframework.web.testfixture.http.server.reactive.MockServerHttpRequest;
 import org.springframework.web.testfixture.http.server.reactive.MockServerHttpResponse;
 import org.springframework.web.testfixture.server.MockServerWebExchange;
+import org.springframework.web.util.UriUtils;
 
 import static java.nio.charset.StandardCharsets.UTF_8;
 import static org.assertj.core.api.Assertions.assertThat;
@@ -65,19 +71,21 @@ import static org.mockito.Mockito.mock;
  * Unit tests for {@link ResourceWebHandler}.
  *
  * @author Rossen Stoyanchev
+ * @author Sam Brannen
  */
-public class ResourceWebHandlerTests {
+class ResourceWebHandlerTests {
 
 	private static final Duration TIMEOUT = Duration.ofSeconds(1);
 
 	private ResourceWebHandler handler;
 
+
 	@BeforeEach
-	public void setup() throws Exception {
-		List<Resource> locations = new ArrayList<>(2);
-		locations.add(new ClassPathResource("test/", getClass()));
-		locations.add(new ClassPathResource("testalternatepath/", getClass()));
-		locations.add(new ClassPathResource("META-INF/resources/webjars/"));
+	void setup() throws Exception {
+		List<Resource> locations = List.of(
+				new ClassPathResource("test/", getClass()),
+				new ClassPathResource("testalternatepath/", getClass()),
+				new ClassPathResource("META-INF/resources/webjars/"));
 
 		this.handler = new ResourceWebHandler();
 		this.handler.setLocations(locations);
@@ -87,7 +95,7 @@ public class ResourceWebHandlerTests {
 
 
 	@Test
-	public void getResource() throws Exception {
+	void getResource() throws Exception {
 		MockServerWebExchange exchange = MockServerWebExchange.from(MockServerHttpRequest.get(""));
 		setPathWithinHandlerMapping(exchange, "foo.css");
 		this.handler.handle(exchange).block(TIMEOUT);
@@ -104,7 +112,7 @@ public class ResourceWebHandlerTests {
 	}
 
 	@Test
-	public void getResourceHttpHeader() throws Exception {
+	void getResourceHttpHeader() throws Exception {
 		MockServerWebExchange exchange = MockServerWebExchange.from(MockServerHttpRequest.head(""));
 		setPathWithinHandlerMapping(exchange, "foo.css");
 		this.handler.handle(exchange).block(TIMEOUT);
@@ -117,11 +125,14 @@ public class ResourceWebHandlerTests {
 		assertThat(headers.containsKey("Last-Modified")).isTrue();
 		assertThat(resourceLastModifiedDate("test/foo.css") / 1000).isEqualTo(headers.getLastModified() / 1000);
 		assertThat(headers.getFirst("Accept-Ranges")).isEqualTo("bytes");
-		assertThat(headers.get("Accept-Ranges").size()).isEqualTo(1);
+		assertThat(headers.get("Accept-Ranges")).hasSize(1);
+
+		StepVerifier.create(exchange.getResponse().getBody())
+				.verifyComplete();
 	}
 
 	@Test
-	public void getResourceHttpOptions() {
+	void getResourceHttpOptions() {
 		MockServerWebExchange exchange = MockServerWebExchange.from(MockServerHttpRequest.options(""));
 		setPathWithinHandlerMapping(exchange, "foo.css");
 		this.handler.handle(exchange).block(TIMEOUT);
@@ -131,7 +142,7 @@ public class ResourceWebHandlerTests {
 	}
 
 	@Test
-	public void getResourceNoCache() throws Exception {
+	void getResourceNoCache() throws Exception {
 		MockServerWebExchange exchange = MockServerWebExchange.from(MockServerHttpRequest.get(""));
 		setPathWithinHandlerMapping(exchange, "foo.css");
 		this.handler.setCacheControl(CacheControl.noStore());
@@ -146,7 +157,7 @@ public class ResourceWebHandlerTests {
 	}
 
 	@Test
-	public void getVersionedResource() throws Exception {
+	void getVersionedResource() throws Exception {
 		VersionResourceResolver versionResolver = new VersionResourceResolver();
 		versionResolver.addFixedVersionStrategy("versionString", "/**");
 		this.handler.setResourceResolvers(Arrays.asList(versionResolver, new PathResourceResolver()));
@@ -162,7 +173,7 @@ public class ResourceWebHandlerTests {
 	}
 
 	@Test
-	public void getResourceWithHtmlMediaType() throws Exception {
+	void getResourceWithHtmlMediaType() throws Exception {
 		MockServerWebExchange exchange = MockServerWebExchange.from(MockServerHttpRequest.get(""));
 		setPathWithinHandlerMapping(exchange, "foo.html");
 		this.handler.handle(exchange).block(TIMEOUT);
@@ -177,7 +188,7 @@ public class ResourceWebHandlerTests {
 	}
 
 	@Test
-	public void getResourceFromAlternatePath() throws Exception {
+	void getResourceFromAlternatePath() throws Exception {
 		MockServerWebExchange exchange = MockServerWebExchange.from(MockServerHttpRequest.get(""));
 		setPathWithinHandlerMapping(exchange, "baz.css");
 		this.handler.handle(exchange).block(TIMEOUT);
@@ -194,7 +205,7 @@ public class ResourceWebHandlerTests {
 	}
 
 	@Test
-	public void getResourceFromSubDirectory() {
+	void getResourceFromSubDirectory() {
 		MockServerWebExchange exchange = MockServerWebExchange.from(MockServerHttpRequest.get(""));
 		setPathWithinHandlerMapping(exchange, "js/foo.js");
 		this.handler.handle(exchange).block(TIMEOUT);
@@ -204,7 +215,7 @@ public class ResourceWebHandlerTests {
 	}
 
 	@Test
-	public void getResourceFromSubDirectoryOfAlternatePath() {
+	void getResourceFromSubDirectoryOfAlternatePath() {
 		MockServerWebExchange exchange = MockServerWebExchange.from(MockServerHttpRequest.get(""));
 		setPathWithinHandlerMapping(exchange, "js/baz.js");
 		this.handler.handle(exchange).block(TIMEOUT);
@@ -215,11 +226,11 @@ public class ResourceWebHandlerTests {
 	}
 
 	@Test
-	public void getResourceWithRegisteredMediaType() throws Exception {
+	void getResourceWithRegisteredMediaType() throws Exception {
 		MediaType mediaType = new MediaType("foo", "bar");
 
 		ResourceWebHandler handler = new ResourceWebHandler();
-		handler.setLocations(Collections.singletonList(new ClassPathResource("test/", getClass())));
+		handler.setLocations(List.of(new ClassPathResource("test/", getClass())));
 		handler.setMediaTypes(Collections.singletonMap("bar", mediaType));
 		handler.afterPropertiesSet();
 
@@ -232,9 +243,46 @@ public class ResourceWebHandlerTests {
 		assertResponseBody(exchange, "foo bar foo bar foo bar");
 	}
 
+	@Test
+	void getResourceFromFileSystem() throws Exception {
+		String packagePath = ClassUtils.classPackageAsResourcePath(getClass());
+		String path = Paths.get("src/test/resources", packagePath).normalize() + "/";
+
+		ResourceWebHandler handler = new ResourceWebHandler();
+		handler.setLocations(List.of(new FileSystemResource(path)));
+		handler.afterPropertiesSet();
+
+		MockServerWebExchange exchange = MockServerWebExchange.from(MockServerHttpRequest.get(""));
+		setPathWithinHandlerMapping(exchange, UriUtils.encodePath("test/foo with spaces.css", UTF_8));
+		handler.handle(exchange).block(TIMEOUT);
+
+		HttpHeaders headers = exchange.getResponse().getHeaders();
+		assertThat(headers.getContentType()).isEqualTo(MediaType.parseMediaType("text/css"));
+		assertThat(headers.getContentLength()).isEqualTo(17);
+		assertResponseBody(exchange, "h1 { color:red; }");
+	}
+
+	@Test  // gh-27538, gh-27624
+	void filterNonExistingLocations() throws Exception {
+		List<Resource> inputLocations = Arrays.asList(
+				new ClassPathResource("test/", getClass()),
+				new ClassPathResource("testalternatepath/", getClass()),
+				new ClassPathResource("nosuchpath/", getClass()));
+
+		ResourceWebHandler handler = new ResourceWebHandler();
+		handler.setLocations(inputLocations);
+		handler.setOptimizeLocations(true);
+		handler.afterPropertiesSet();
+
+		List<Resource> actual = handler.getLocations();
+		assertThat(actual).hasSize(2);
+		assertThat(actual.get(0).getURL().toString()).endsWith("test/");
+		assertThat(actual.get(1).getURL().toString()).endsWith("testalternatepath/");
+	}
+
 	@Test // SPR-14577
-	public void getMediaTypeWithFavorPathExtensionOff() throws Exception {
-		List<Resource> paths = Collections.singletonList(new ClassPathResource("test/", getClass()));
+	void getMediaTypeWithFavorPathExtensionOff() throws Exception {
+		List<Resource> paths = List.of(new ClassPathResource("test/", getClass()));
 		ResourceWebHandler handler = new ResourceWebHandler();
 		handler.setLocations(paths);
 		handler.afterPropertiesSet();
@@ -248,7 +296,7 @@ public class ResourceWebHandlerTests {
 	}
 
 	@Test
-	public void testInvalidPath() throws Exception {
+	void invalidPath() throws Exception {
 
 		// Use mock ResourceResolver: i.e. we're only testing upfront validations...
 
@@ -259,8 +307,8 @@ public class ResourceWebHandlerTests {
 		given(resolver.resolveResource(any(), any(), any(), any())).willReturn(Mono.just(resource));
 
 		ResourceWebHandler handler = new ResourceWebHandler();
-		handler.setLocations(Collections.singletonList(new ClassPathResource("test/", getClass())));
-		handler.setResourceResolvers(Collections.singletonList(resolver));
+		handler.setLocations(List.of(new ClassPathResource("test/", getClass())));
+		handler.setResourceResolvers(List.of(resolver));
 		handler.afterPropertiesSet();
 
 		testInvalidPath("../testsecret/secret.txt", handler);
@@ -268,7 +316,7 @@ public class ResourceWebHandlerTests {
 		testInvalidPath(":/../../testsecret/secret.txt", handler);
 
 		Resource location = new UrlResource(getClass().getResource("./test/"));
-		this.handler.setLocations(Collections.singletonList(location));
+		handler.setLocations(List.of(location));
 		Resource secretResource = new UrlResource(getClass().getResource("testsecret/secret.txt"));
 		String secretPath = secretResource.getURL().getPath();
 
@@ -289,38 +337,33 @@ public class ResourceWebHandlerTests {
 		StepVerifier.create(handler.handle(exchange))
 				.expectErrorSatisfies(err -> {
 					assertThat(err).isInstanceOf(ResponseStatusException.class);
-					assertThat(((ResponseStatusException) err).getRawStatusCode()).isEqualTo(404);
+					assertThat(((ResponseStatusException) err).getStatusCode()).isEqualTo(HttpStatus.NOT_FOUND);
 				}).verify(TIMEOUT);
 	}
 
-	@Test
-	public void testResolvePathWithTraversal() throws Exception {
-		for (HttpMethod method : HttpMethod.values()) {
-			testResolvePathWithTraversal(method);
-		}
-	}
-
-	private void testResolvePathWithTraversal(HttpMethod httpMethod) throws Exception {
+	@ParameterizedTest
+	@MethodSource("httpMethods")
+	void resolvePathWithTraversal(HttpMethod method) throws Exception {
 		Resource location = new ClassPathResource("test/", getClass());
-		this.handler.setLocations(Collections.singletonList(location));
+		this.handler.setLocations(List.of(location));
 
-		testResolvePathWithTraversal(httpMethod, "../testsecret/secret.txt", location);
-		testResolvePathWithTraversal(httpMethod, "test/../../testsecret/secret.txt", location);
-		testResolvePathWithTraversal(httpMethod, ":/../../testsecret/secret.txt", location);
+		testResolvePathWithTraversal(method, "../testsecret/secret.txt", location);
+		testResolvePathWithTraversal(method, "test/../../testsecret/secret.txt", location);
+		testResolvePathWithTraversal(method, ":/../../testsecret/secret.txt", location);
 
 		location = new UrlResource(getClass().getResource("./test/"));
-		this.handler.setLocations(Collections.singletonList(location));
+		this.handler.setLocations(List.of(location));
 		Resource secretResource = new UrlResource(getClass().getResource("testsecret/secret.txt"));
 		String secretPath = secretResource.getURL().getPath();
 
-		testResolvePathWithTraversal(httpMethod, "file:" + secretPath, location);
-		testResolvePathWithTraversal(httpMethod, "/file:" + secretPath, location);
-		testResolvePathWithTraversal(httpMethod, "url:" + secretPath, location);
-		testResolvePathWithTraversal(httpMethod, "/url:" + secretPath, location);
-		testResolvePathWithTraversal(httpMethod, "////../.." + secretPath, location);
-		testResolvePathWithTraversal(httpMethod, "/%2E%2E/testsecret/secret.txt", location);
-		testResolvePathWithTraversal(httpMethod, "%2F%2F%2E%2E%2F%2Ftestsecret/secret.txt", location);
-		testResolvePathWithTraversal(httpMethod, "url:" + secretPath, location);
+		testResolvePathWithTraversal(method, "file:" + secretPath, location);
+		testResolvePathWithTraversal(method, "/file:" + secretPath, location);
+		testResolvePathWithTraversal(method, "url:" + secretPath, location);
+		testResolvePathWithTraversal(method, "/url:" + secretPath, location);
+		testResolvePathWithTraversal(method, "////../.." + secretPath, location);
+		testResolvePathWithTraversal(method, "/%2E%2E/testsecret/secret.txt", location);
+		testResolvePathWithTraversal(method, "%2F%2F%2E%2E%2F%2Ftestsecret/secret.txt", location);
+		testResolvePathWithTraversal(method, "url:" + secretPath, location);
 
 		// The following tests fail with a MalformedURLException on Windows
 		// testResolvePathWithTraversal(location, "/" + secretPath);
@@ -335,7 +378,7 @@ public class ResourceWebHandlerTests {
 		StepVerifier.create(this.handler.handle(exchange))
 				.expectErrorSatisfies(err -> {
 					assertThat(err).isInstanceOf(ResponseStatusException.class);
-					assertThat(((ResponseStatusException) err).getRawStatusCode()).isEqualTo(404);
+					assertThat(((ResponseStatusException) err).getStatusCode()).isEqualTo(HttpStatus.NOT_FOUND);
 				})
 				.verify(TIMEOUT);
 		if (!location.createRelative(requestPath).exists() && !requestPath.contains(":")) {
@@ -344,7 +387,7 @@ public class ResourceWebHandlerTests {
 	}
 
 	@Test
-	public void processPath() {
+	void processPath() {
 		assertThat(this.handler.processPath("/foo/bar")).isSameAs("/foo/bar");
 		assertThat(this.handler.processPath("foo/bar")).isSameAs("foo/bar");
 
@@ -373,7 +416,7 @@ public class ResourceWebHandlerTests {
 	}
 
 	@Test
-	public void initAllowedLocations() {
+	void initAllowedLocations() {
 		PathResourceResolver resolver = (PathResourceResolver) this.handler.getResourceResolvers().get(0);
 		Resource[] locations = resolver.getAllowedLocations();
 
@@ -384,7 +427,7 @@ public class ResourceWebHandlerTests {
 	}
 
 	@Test
-	public void initAllowedLocationsWithExplicitConfiguration() throws Exception {
+	void initAllowedLocationsWithExplicitConfiguration() throws Exception {
 		ClassPathResource location1 = new ClassPathResource("test/", getClass());
 		ClassPathResource location2 = new ClassPathResource("testalternatepath/", getClass());
 
@@ -392,7 +435,7 @@ public class ResourceWebHandlerTests {
 		pathResolver.setAllowedLocations(location1);
 
 		ResourceWebHandler handler = new ResourceWebHandler();
-		handler.setResourceResolvers(Collections.singletonList(pathResolver));
+		handler.setResourceResolvers(List.of(pathResolver));
 		handler.setLocations(Arrays.asList(location1, location2));
 		handler.afterPropertiesSet();
 
@@ -402,7 +445,7 @@ public class ResourceWebHandlerTests {
 	}
 
 	@Test
-	public void notModified() throws Exception {
+	void notModified() throws Exception {
 		MockServerWebExchange exchange = MockServerWebExchange.from(
 				MockServerHttpRequest.get("").ifModifiedSince(resourceLastModified("test/foo.css")));
 
@@ -412,7 +455,7 @@ public class ResourceWebHandlerTests {
 	}
 
 	@Test
-	public void modified() throws Exception {
+	void modified() throws Exception {
 		long timestamp = resourceLastModified("test/foo.css") / 1000 * 1000 - 1;
 		MockServerHttpRequest request = MockServerHttpRequest.get("").ifModifiedSince(timestamp).build();
 		MockServerWebExchange exchange = MockServerWebExchange.from(request);
@@ -424,62 +467,57 @@ public class ResourceWebHandlerTests {
 	}
 
 	@Test
-	public void directory() {
+	void directory() {
 		MockServerWebExchange exchange = MockServerWebExchange.from(MockServerHttpRequest.get(""));
 		setPathWithinHandlerMapping(exchange, "js/");
 		StepVerifier.create(this.handler.handle(exchange))
 				.expectErrorSatisfies(err -> {
 					assertThat(err).isInstanceOf(ResponseStatusException.class);
-					assertThat(((ResponseStatusException) err).getRawStatusCode()).isEqualTo(404);
+					assertThat(((ResponseStatusException) err).getStatusCode()).isEqualTo(HttpStatus.NOT_FOUND);
 				}).verify(TIMEOUT);
 	}
 
 	@Test
-	public void directoryInJarFile() {
+	void directoryInJarFile() {
 		MockServerWebExchange exchange = MockServerWebExchange.from(MockServerHttpRequest.get(""));
 		setPathWithinHandlerMapping(exchange, "underscorejs/");
 		StepVerifier.create(this.handler.handle(exchange))
 				.expectErrorSatisfies(err -> {
 					assertThat(err).isInstanceOf(ResponseStatusException.class);
-					assertThat(((ResponseStatusException) err).getRawStatusCode()).isEqualTo(404);
+					assertThat(((ResponseStatusException) err).getStatusCode()).isEqualTo(HttpStatus.NOT_FOUND);
 				}).verify(TIMEOUT);
 	}
 
 	@Test
-	public void missingResourcePath() {
+	void missingResourcePath() {
 		MockServerWebExchange exchange = MockServerWebExchange.from(MockServerHttpRequest.get(""));
 		setPathWithinHandlerMapping(exchange, "");
 		StepVerifier.create(this.handler.handle(exchange))
 				.expectErrorSatisfies(err -> {
 					assertThat(err).isInstanceOf(ResponseStatusException.class);
-					assertThat(((ResponseStatusException) err).getRawStatusCode()).isEqualTo(404);
+					assertThat(((ResponseStatusException) err).getStatusCode()).isEqualTo(HttpStatus.NOT_FOUND);
 				}).verify(TIMEOUT);
 	}
 
 	@Test
-	public void noPathWithinHandlerMappingAttribute() {
+	void noPathWithinHandlerMappingAttribute() {
 		MockServerWebExchange exchange = MockServerWebExchange.from(MockServerHttpRequest.get(""));
 		assertThatIllegalArgumentException().isThrownBy(() ->
 				this.handler.handle(exchange).block(TIMEOUT));
 	}
 
 	@Test
-	public void unsupportedHttpMethod() {
+	void unsupportedHttpMethod() {
 		MockServerWebExchange exchange = MockServerWebExchange.from(MockServerHttpRequest.post(""));
 		setPathWithinHandlerMapping(exchange, "foo.css");
 		assertThatExceptionOfType(MethodNotAllowedException.class).isThrownBy(() ->
 				this.handler.handle(exchange).block(TIMEOUT));
 	}
 
-	@Test
-	public void resourceNotFound() throws Exception {
-		for (HttpMethod method : HttpMethod.values()) {
-			resourceNotFound(method);
-		}
-	}
-
-	private void resourceNotFound(HttpMethod httpMethod) {
-		MockServerHttpRequest request = MockServerHttpRequest.method(httpMethod, "").build();
+	@ParameterizedTest
+	@MethodSource("httpMethods")
+	void resourceNotFound(HttpMethod method) throws Exception {
+		MockServerHttpRequest request = MockServerHttpRequest.method(method, "").build();
 		MockServerWebExchange exchange = MockServerWebExchange.from(request);
 		setPathWithinHandlerMapping(exchange, "not-there.css");
 		Mono<Void> mono = this.handler.handle(exchange);
@@ -487,7 +525,7 @@ public class ResourceWebHandlerTests {
 		StepVerifier.create(mono)
 				.expectErrorSatisfies(err -> {
 					assertThat(err).isInstanceOf(ResponseStatusException.class);
-					assertThat(((ResponseStatusException) err).getRawStatusCode()).isEqualTo(404);
+					assertThat(((ResponseStatusException) err).getStatusCode()).isEqualTo(HttpStatus.NOT_FOUND);
 				}).verify(TIMEOUT);
 
 		// SPR-17475
@@ -497,7 +535,7 @@ public class ResourceWebHandlerTests {
 	}
 
 	@Test
-	public void partialContentByteRange() {
+	void partialContentByteRange() {
 		MockServerHttpRequest request = MockServerHttpRequest.get("").header("Range", "bytes=0-1").build();
 		MockServerWebExchange exchange = MockServerWebExchange.from(request);
 		setPathWithinHandlerMapping(exchange, "foo.txt");
@@ -513,7 +551,7 @@ public class ResourceWebHandlerTests {
 	}
 
 	@Test
-	public void partialContentByteRangeNoEnd() {
+	void partialContentByteRangeNoEnd() {
 		MockServerHttpRequest request = MockServerHttpRequest.get("").header("range", "bytes=9-").build();
 		MockServerWebExchange exchange = MockServerWebExchange.from(request);
 		setPathWithinHandlerMapping(exchange, "foo.txt");
@@ -529,7 +567,7 @@ public class ResourceWebHandlerTests {
 	}
 
 	@Test
-	public void partialContentByteRangeLargeEnd() {
+	void partialContentByteRangeLargeEnd() {
 		MockServerHttpRequest request = MockServerHttpRequest.get("").header("range", "bytes=9-10000").build();
 		MockServerWebExchange exchange = MockServerWebExchange.from(request);
 		setPathWithinHandlerMapping(exchange, "foo.txt");
@@ -545,7 +583,7 @@ public class ResourceWebHandlerTests {
 	}
 
 	@Test
-	public void partialContentSuffixRange() {
+	void partialContentSuffixRange() {
 		MockServerHttpRequest request = MockServerHttpRequest.get("").header("range", "bytes=-1").build();
 		MockServerWebExchange exchange = MockServerWebExchange.from(request);
 		setPathWithinHandlerMapping(exchange, "foo.txt");
@@ -561,7 +599,7 @@ public class ResourceWebHandlerTests {
 	}
 
 	@Test
-	public void partialContentSuffixRangeLargeSuffix() {
+	void partialContentSuffixRangeLargeSuffix() {
 		MockServerHttpRequest request = MockServerHttpRequest.get("").header("range", "bytes=-11").build();
 		MockServerWebExchange exchange = MockServerWebExchange.from(request);
 		setPathWithinHandlerMapping(exchange, "foo.txt");
@@ -577,7 +615,7 @@ public class ResourceWebHandlerTests {
 	}
 
 	@Test
-	public void partialContentInvalidRangeHeader() {
+	void partialContentInvalidRangeHeader() {
 		MockServerHttpRequest request = MockServerHttpRequest.get("").header("range", "bytes=foo bar").build();
 		MockServerWebExchange exchange = MockServerWebExchange.from(request);
 		setPathWithinHandlerMapping(exchange, "foo.txt");
@@ -592,7 +630,7 @@ public class ResourceWebHandlerTests {
 	}
 
 	@Test
-	public void partialContentMultipleByteRanges() {
+	void partialContentMultipleByteRanges() {
 		MockServerHttpRequest request = MockServerHttpRequest.get("").header("Range", "bytes=0-1, 4-5, 8-9").build();
 		MockServerWebExchange exchange = MockServerWebExchange.from(request);
 		setPathWithinHandlerMapping(exchange, "foo.txt");
@@ -605,7 +643,7 @@ public class ResourceWebHandlerTests {
 		String boundary = "--" + exchange.getResponse().getHeaders().getContentType().toString().substring(30);
 
 		Mono<DataBuffer> reduced = Flux.from(exchange.getResponse().getBody())
-				.reduce(DefaultDataBufferFactory.sharedInstance.allocateBuffer(), (previous, current) -> {
+				.reduce(DefaultDataBufferFactory.sharedInstance.allocateBuffer(256), (previous, current) -> {
 					previous.write(current);
 					DataBufferUtils.release(current);
 					return previous;
@@ -636,7 +674,7 @@ public class ResourceWebHandlerTests {
 	}
 
 	@Test  // SPR-14005
-	public void doOverwriteExistingCacheControlHeaders() {
+	void doOverwriteExistingCacheControlHeaders() {
 		MockServerWebExchange exchange = MockServerWebExchange.from(MockServerHttpRequest.get(""));
 		exchange.getResponse().getHeaders().setCacheControl(CacheControl.noStore().getHeaderValue());
 		setPathWithinHandlerMapping(exchange, "foo.css");
@@ -678,6 +716,11 @@ public class ResourceWebHandlerTests {
 				.consumeNextWith(buf -> assertThat(buf.toString(UTF_8)).isEqualTo(responseBody))
 				.expectComplete()
 				.verify();
+	}
+
+
+	static Stream<HttpMethod> httpMethods() {
+		return Arrays.stream(HttpMethod.values());
 	}
 
 }
